<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:text="Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="31dp"
        android:fontFamily="casual"
        android:typeface="sans"
        android:textStyle="normal|italic"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@android:color/black" />

    <TextView
        android:text="genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="19dp"
        android:id="@+id/textView2"
        android:fontFamily="sans-serif-condensed"
        android:typeface="serif"
        android:textColor="@android:color/darker_gray" />
</RelativeLayout>